--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>The DOM playground</title>
-  <style>
-  .selected{ font-weight: bold;}
-  </style>
-  <script>
-  console.log("JavaScript is alive");
-  </script>
+  <title>Le DOM playground</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="app.js" ></script>
 </head>
 <body>
   <div id="greeting">
