--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
   </div>
 
   <input type="submit" value="Reset" id="reset"></input>
+  <script type="text/javascript"src="jscript.js"></script>
 </body>
 </html>
